--- a/templates/stock_info.html
+++ b/templates/stock_info.html
@@ -15,17 +15,17 @@
             Ticker symbol: <input type='text' name='stock_ticker' />
             </p>
             <p>
-            Closing price: <input type='checkbox' name='close' />
+            Closing price: <input type='radio' name='close' />
             </p>
             <p>
-            Adjusted closing price: <input type='checkbox' name='adj_close' />
+            Adjusted closing price: <input type='radio' name='adj_close' />
             </p>
             <p>
-            Opening price: <input type='checkbox' name ='open' />
+            Opening price: <input type='radio' name ='open' />
             </p>
-	    <p>
-	    Adjusted opening price: <input type='checkbox' name='adj_open' />
-	    </p>
+            <p>
+            Adjusted opening price: <input type='radio' name='adj_open' />
+            </p>
             <p>
             <input type='submit' value='Submit' />
             </p>
